<resources>
    <string name="app_name" translatable="false">TFG2020</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="redes_sociales">Social Media</string>
    <string name="title_activity_detalles_serie" translatable="false">DetallesSerie</string>
    <string name="large_text" translatable="false">
        "John Joseph «Jack» Nicholson es un actor, productor, guionista y director de cine estadounidense, doce veces nominado y tres veces ganador del Premio de la Academia.\n\nNicholson es considerado uno de los actores más versátiles en la historia del cine estadounidense por sus grandes interpretaciones y muy diversos roles. Durante la primera mitad de la década de los 70, participó en producciones como Mi vida es mi vida (1970), El último deber (1973) y Chinatown (1974), que le valieron nominaciones al Óscar.\n\nEn 1975 recibió su primer premio de la Academia por su papel en One Flew Over the Cuckoo's Nest, en la categoría de Mejor actor. En los siguientes años Nicholson recibiría numerosas nominaciones al Óscar por su trabajo en Rojos (1981), El honor de los Prizzi (1985), Tallo de hierro (1987), Algunos hombres buenos (1992) y About Schmidt (2002). Obtuvo el premio en dos ocasiones más por Mejor actor y Mejor actor secundario en Mejor… imposible (1997) y La fuerza del cariño (1983), respectivamente. Esto lo convirtió en uno de los actores con más estatuillas en la historia del cine, con igual cantidad que Walter Brennan, Ingrid Bergman, Meryl Streep y Daniel Day Lewis y sólo superado por Katharine Hepburn. Ha recibido siete Globos de Oro, entre otras nominaciones.\n\nEl año 2006 actuó en la película The Departed, de Martin Scorsese. La cinta ganó cuatro premios Óscar, entre ellos mejor director, mejor película y mejor guion adaptado. Nicholson interpretó a Frank Costello, un jefe de la mafia de Boston. El actor obtuvo el Austin Film Critics Award en la categoría de mejor actor de reparto, siendo nominado además a los premios BAFTA, Critics Choice Awards, premios Globo de Oro, premios Satellite y MTV Movie Awards.\n\nEn septiembre de 2013 se anunció su retiro de la actuación, debido a los problemas de pérdida de memoria que hasta esa fecha estaba padeciendo. Sin embargo, la información fue posteriormente desmentida por la periodista Maria Shriver, quien es cercana al actor."
    </string>
    <string name="buscador">Search</string>
    <string name="title_activity_descripcion_serie" translatable="false">DescripcionSerie</string>
    <string name="no_conn">No Internet Connection</string>
    <string name="title_activity_detalles_actor" translatable="false">DetallesActor</string>
    <string name="series_favoritas">Following Series</string>
    <string name="series_populares">Trending Series</string>
    <string name="series_nuevas">New Series</string>
    <string name="serie_poster">Serie poster</string>
    <string name="texto_prueba_corto" translatable="false">I am not Okay with this</string>
    <string name="valoration_example" translatable="false">9.0</string>
    <string name="checked">Following</string>
    <string name="tv_search">TV Search</string>
    <string name="search_info_desc">Find your favourite TV shows \n and people</string>
    <string name="my_profile">My Profile</string>
    <string name="favourites">Following</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="menu_share">Share</string>
    <string name="reparto">CAST</string>
    <string name="temporadas">SEASONS</string>
    <string name="genre">Genre</string>
    <string name="sinopsis_title">Overview</string>
    <string name="genres_title">Genres</string>
    <string name="networks_title">Networks</string>
    <string name="trailer_title">Trailer</string>
    <string name="sinopsis">OVERVIEW</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_send">Send</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="biografia">Biography</string>
    <string name="series">Series</string>
    <string name="peliculas">Movies</string>
    <string name="years">years</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="people">People</string>
    <string name="last_watched">Last watched</string>
    <string name="name">Name</string>
    <string name="recently_added">Recently added</string>
    <string name="favorites">Favorite Series</string>
    <string name="no_data">No data</string>
    <string name="no_cast">No data of cast</string>
    <string name="no_seasons">No data of seasons</string>
    <string name="num_episodes_follow">%1$d/%2$d episodes</string>
    <string name="n_episodes">%1$d episodes</string>
    <string name="open_web">Open in web</string>
    <string name="not_implemented">Not yet implemented</string>
    <string name="add_fav">Added to following list</string>
    <string name="already_fav">Already following</string>
    <string name="delete_fav">Delete from list</string>
    <string name="borrado_correcto">Deleted</string>
    <string name="num_vistos" translatable="false">%1$d/%2$d</string>
    <string name="next_episode">"Next episode: "</string>
    <string name="just_watch">You just watched every episode!</string>
    <string name="empty" translatable="false" />
    <string name="tus_series_seguidas_aparecer_aqu">Your following list will appear here</string>
    <string name="sharing_url">Sharing URL</string>
    <string name="recent_added">Sort by recently added</string>
    <string name="sort_name">Sort by name</string>
    <string name="sort_watched">Sort by last watched</string>
    <string name="sort_orientation">Sort descending or ascending</string>
    <string name="sort_by">Sort by:</string>
    <string name="finished_date">Finished: %1$s at %2$s</string>
    <string name="hours_watched_total">%1$d hours, %2$d minutes watching</string>
    <string name="days_watched_total">%1$d days, %2$d hours, %3$d minutes watching</string>
    <string name="year_watched_total">%1$d years, %2$d days, %3$d hours, %4$d minutes watching</string>
    <string name="number_shows">You follow %1$d tv-shows</string>
    <string name="episodes_watched_total">You have watched %1$d episodes</string>
    <string name="app_name_final" translatable="false">TV Tracker</string>
    <string name="app_logo" translatable="false">app_logo</string>
    <string name="fecha_de_episodio">"Date: "</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="or">OR</string>
    <string name="forget_password">Did you forget your password?</string>
    <string name="no_network">No network connection!</string>
    <string name="activate_net">Activate network</string>
    <string name="success_login">Successfully Logged In</string>
    <string name="current_user">\"Currently Logged in: \"</string>
    <string name="success_register">Successfully Registered</string>
    <string name="login_fail">\"Login Failed: \"</string>
    <string name="google_fail">\"Google Sign in Failed \"</string>
    <string name="google_success">Google Sign in Succeeded</string>
    <string name="auth_success">\"Authentication Succeeded \"</string>
    <string name="auth_fail">Authentication failed:</string>
    <string name="register_fail">\"Registration Failed: \"</string>
    <string name="reset_success">Reset link sent to your email</string>
    <string name="reset_fail">\"Unable to send reset mail. \"</string>
</resources>
