<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.tracker.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/search_fragment" />
    <fragment
        android:id="@+id/navigation_fav"
        android:name="com.tracker.ui.favoritos.FavoritosFragment"
        android:label="@string/favourites"
        tools:layout="@layout/favoritos_fragment" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.tracker.ui.profile.ProfileFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/profile_fragment" />
</navigation>