<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="140dp"
        android:layout_height="260dp"
        android:layout_margin="2.5dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2.5dp"
        app:cardCornerRadius="5dp">

        <ImageView
            android:id="@+id/posters"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/serie_poster" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:background="@color/whiteColor"
            android:padding="10dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/texto_prueba_corto"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="6pt" />
            <TextView
                android:id="@+id/name_character"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="2dp"
                android:ellipsize="marquee"
                android:textAlignment="center"
                android:text="@string/texto_prueba_corto"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="5pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_margin="5dp"
            android:padding="2dp"
            android:background="@drawable/round_val_movie">

            <TextView
                android:id="@+id/valoration"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:text="@string/valoration_example"
                android:textColor="@color/whiteColor"
                android:textSize="6pt"
                android:gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>