<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.SinopsisFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- SINOPSIS -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/sinopsis_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.borjabravo.readmoretextview.ReadMoreTextView
            android:id="@+id/sinopsis_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:colorClickableText="@color/colorPrimary"
            app:trimCollapsedText="Show all"
            app:trimLines="80"
            app:trimMode="trimModeLength" />

        <!-- GÉNEROS -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/genres_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/genre1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/round"
                android:padding="7.5dp"
                android:text="@string/genre"
                android:textColor="@color/whiteColor"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/genre2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/round"
                android:padding="7.5dp"
                android:text="@string/genre"
                android:textColor="@color/whiteColor"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/genre3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/round"
                android:padding="7.5dp"
                android:text="@string/genre"
                android:textColor="@color/whiteColor"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/genre4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:padding="7.5dp"
                android:text="@string/genre"
                android:textColor="@color/whiteColor"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

        <!-- NETWORKS -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/networks_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <ImageView
                android:id="@+id/network_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:src="@drawable/netflix" />

            <ImageView
                android:id="@+id/network_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:src="@drawable/amazon" />

            <ImageView
                android:id="@+id/network_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:src="@drawable/netflix" />

            <ImageView
                android:id="@+id/network_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:src="@drawable/amazon" />

            <ImageView
                android:id="@+id/network_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:src="@drawable/netflix" />

            <ImageView
                android:id="@+id/network_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:src="@drawable/amazon" />
        </LinearLayout>

        <!-- TRAILER-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/trailer_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <VideoView
            android:id="@+id/video_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorPrimary" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>