<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.ActorFragment"
    tools:showIn="@layout/fragment_actor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
>
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/birth"/>
            <TextView
                android:id="@+id/fecha_actor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="Fecha de nacimiento"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
>
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/mortimer"/>
            <TextView
                android:id="@+id/fecha_actor_mortimer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="Fecha de fallecimiento"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:layout_marginBottom="15dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"/>
            <TextView
                android:id="@+id/lugar_actor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="Lugar de nacimiento"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/biografia"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.borjabravo.readmoretextview.ReadMoreTextView
            android:id="@+id/bio_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:colorClickableText="@color/colorPrimary"
            app:trimLines="70"
            app:trimMode="trimModeLength" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/series"
            android:textSize="20sp"
            android:textStyle="bold" />


        <ViewSwitcher
            android:id="@+id/switcherSeries"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSeries"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/text_empty_dos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_data" />

        </ViewSwitcher>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/peliculas"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ViewSwitcher
            android:id="@+id/switcherFilms"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPelis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/text_empty_uno"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_data" />

        </ViewSwitcher>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>